Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
         <!--========== CSS ==========-->
-        <link rel="stylesheet" href="/css/styles.css">
-        <link rel="stylesheet" href="/css/darkmode.css">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="darkmode.css">
 
         <title>Palmarizarte</title>
     </head>
@@ -38,7 +38,7 @@
                 <div>
                     <a href="#" class="nav__link nav__logo">
                         <div class="logo-palmarizarte">
-                            <img src="/img/logo.png" alt="">
+                            <img src="logo.png" alt="">
                         </div>
                        
                         <span class="nav__logo-name">Palmarizarte</span>
@@ -148,6 +148,6 @@
         </main>
 
         <!--========== MAIN JS ==========-->
-        <script src="/js/main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
